# test-ad-robot-api

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_initial.py  20260704_0002_pending_sync.py  20260706_0003_offer_pin.py
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/integrations/keitaro/: __init__.py  client.py  payloads.py
backend/app/services/: aliases.py  campaigns.py  geo.py  weights.py
backend/tests/: conftest.py  test_integration.py  test_unit.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/campaigns/: page.tsx
frontend/app/campaigns/[id]/: page.tsx
frontend/components/: CampaignDetailPageClient.tsx  CampaignsPageClient.tsx  OfferAutocomplete.tsx
frontend/lib/: api.ts
